test/compare/testdata/fixedbugs/issue559.go
// errorcheck

package main

func main() {
    if nil { } // ERROR `use of untyped nil`
}